--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ margin: 0;
 body {
 line-height: 1.5;
 -webkit-font-smoothing: antialiased;
+height: 100vh;
+display: flex;
+flex-direction: column;
 }
 img, picture, video, canvas, svg {
 display: block;
@@ -21,4 +24,25 @@ font: inherit;
 }
 p, h1, h2, h3, h4, h5, h6 {
 overflow-wrap: break-word;
+}
+
+/* My CSS */
+
+.image-container
+{
+    position: relative;
+}
+#background-image
+{
+    max-height: 100vh;
+    width: 35%;
+    flex: 1;
+    position: relative;
+}
+#logo
+{
+    width: 250px;
+    position:absolute;
+    top: 80px;
+    left: 10%;
 }
