--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,8 @@ overflow-wrap: break-word;
 }
 #logo
 {
-    width: 250px;
+    width: 15%;
     position:absolute;
-    top: 80px;
+    bottom: 50%;
     left: 10%;
 }
