--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,8 @@ line-height: 1.5;
 height: 100vh;
 display: flex;
 flex-direction: column;
+font-family: Impact, "Haettenschweiler", 'Arial Narrow Bold', sans-serif;
+font-size: 16px;
 }
 img, picture, video, canvas, svg {
 display: block;
@@ -26,23 +28,33 @@ p, h1, h2, h3, h4, h5, h6 {
 overflow-wrap: break-word;
 }
 
-/* My CSS */
 
-.image-container
-{
-    position: relative;
-}
 #background-image
 {
     max-height: 100vh;
     width: 35%;
     flex: 1;
-    position: relative;
+    position: absolute;
 }
 #logo
 {
     width: 15%;
     position:absolute;
-    bottom: 50%;
+    bottom: 46%;
     left: 10%;
+}
+.logo-background
+{
+    width: 35vw;
+    height: 30vh;
+    background: rgb(205, 196, 179);
+    opacity: 0.7;
+    word-spacing: 1rem;
+    letter-spacing: 0.85rem;
+    bottom: 50%;
+    font-size: 2.5rem;
+    text-align: center;
+    position: absolute;
+    max-width: 35vw;
+    overflow: hidden;
 }
